# sandbox-benchmarking

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: live-smoke.yml  unit-tests.yml
benchmarks/: cold_start.py  command_loop.py  destroy.py  exec.py  filesystem.py  stream.py
core/: __init__.py  config.py  metrics.py  scenario.py  timer.py
providers/: __init__.py  base.py  daytona.py  docker_local.py  e2b.py  registry.py
runner/: run_benchmark.py
scripts/: plot_results.py  summarize_results.py  test_live.sh  test_unit.sh
tests/live/: test_live_smoke.py
tests/unit/: test_metrics.py  test_runner_contract.py
