[project]
name = "sandbox-bench"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "daytona>=0.151.0",
    "e2b>=2.15.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: exercises real providers and requires external services/credentials",
]
